improve(craft): use Collections#unmodifiableList